vite html generator 추가

--- a/20220508svelte-ts/package.json
+++ b/20220508svelte-ts/package.json
@@ -10,14 +10,21 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
-    "@tsconfig/svelte": "^2.0.1",
+    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.44",
+    "@tsconfig/svelte": "^3.0.0",
+    "@types/connect": "^3.4.35",
+    "@types/node": "^17.0.33",
     "sass": "^1.51.0",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.7",
-    "svelte-preprocess": "^4.9.8",
-    "tslib": "^2.3.1",
-    "typescript": "^4.5.4",
-    "vite": "^2.9.7"
+    "svelte": "^3.48.0",
+    "svelte-check": "^2.7.1",
+    "svelte-preprocess": "^4.10.6",
+    "tslib": "^2.4.0",
+    "typescript": "^4.6.4",
+    "vite": "^2.9.9"
+  },
+  "dependencies": {
+    "connect": "^3.7.0",
+    "fastify": "^3.29.0",
+    "middie": "^6.1.0"
   }
 }
