--- a/20220508svelte-ts/tsconfig.json
+++ b/20220508svelte-ts/tsconfig.json
@@ -16,6 +16,7 @@
     "checkJs": true,
     "isolatedModules": true
   },
-  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
+  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte", "vite-env.d.ts"],
+  "exclude": ["main.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
