--- a/20220508svelte-ts/tsconfig.node.json
+++ b/20220508svelte-ts/tsconfig.node.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "composite": true,
     "module": "esnext",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "target": "esnext",
+    "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "server/index.ts"]
 }
