--- a/20220508svelte-ts/package.json
+++ b/20220508svelte-ts/package.json
@@ -10,9 +10,11 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
+    "@rollup/plugin-dynamic-import-vars": "^1.4.3",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.44",
     "@tsconfig/svelte": "^3.0.0",
     "@types/connect": "^3.4.35",
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.33",
     "sass": "^1.51.0",
     "svelte": "^3.48.0",
@@ -20,10 +22,12 @@
     "svelte-preprocess": "^4.10.6",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vite-plugin-pwa": "^0.12.0"
   },
   "dependencies": {
     "connect": "^3.7.0",
+    "express": "^4.18.1",
     "fastify": "^3.29.0",
     "middie": "^6.1.0"
   }
