--- a/20220508svelte-ts/tsconfig.json
+++ b/20220508svelte-ts/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
-    "target": "esnext",
+    "target": "es2021",
+    "lib": ["ESNext"],
     "useDefineForClassFields": true,
     "module": "esnext",
     "resolveJsonModule": true,
